- Added preferences tab and removed some of the options from the menu
- Fixed a bug where changes to the "Run if" statement weren't automatically applied
- Added splash screen
- Added video files as known file types to the file pool
- Added recent files dialog
- Added editor to the qtplugins automatic controls
- Byte-compile all inline_scripts, conditional statements, etc.

0.22 "Axiomatic Axelrod"
- Added search capabilities to inline_editor and a notification of unapplied changes
- Added noise patch as a drawing primitive to the sketchpad
- Fixed a bug where the sketchpad gave errors if it failed to parse a draw command
- Fixed a bug where pre-release versions broke update checking
- Fixed a bug where changing the working directory only worked if the path didn't contain spaces
- The default location for the logfile is now the location of the experiment
- Print stacktrace on unexpected exceptions
- Doesn't ask for subject nr, logfile etc. in debug mode
- Added an optional hack (--pylink) to make sure that pylink is load before pygame (if available)
- Added qtplugin.add_text() function
- Fixed a bug in var_info() which caused the logger to crash on advanced_delay and text_input plugins 
- Added cleanup functions to the experiment, to cleanup afterwards
- Added restart option, to circumvent pylinks refusal to deinitialize (disabled by default, since the problems seems to be fixed)
- Fixed a papercut in the logger which caused unpredictable ordering of columns
- Fixed a bug which could cause the sketchpad to crash on incorrectly formatted draw items, causing a "variable g not defined error".
- Fixed a bug where exceptions on apply script weren't caught and caused a crash
- Fixed a bug where changing the "Show if" option in sketchpads wasn't automatically applied
- Added a delete option to the context menu in the overview tree of items in a sequence
- Added comments to OpenSesame script, indicated by # or //