@@ -25,6 +25,7 @@
 - Added recent files dialog
 - Added editor to the qtplugins automatic controls
 - Byte-compile all inline_scripts, conditional statements, etc.
+- Added indent/ unindent buttons to the inline editor
 
 0.22 "Axiomatic Axelrod"
 - Added search capabilities to inline_editor and a notification of unapplied changes
